--- a/ubuntu22/README
+++ b/ubuntu22/README
@@ -2,7 +2,6 @@
 
 sudo adduser kadap
 
-cd /home/ubuntu
 
 git clone https://github.com/limhunjung/cloud-init.git
 
@@ -14,45 +13,41 @@ sudo mv /home/ubuntu/cloud-init/ubuntu22/kadap-welecome.msg /etc/motd
 sudo chown root /etc/motd && sudo chgrp root /etc/motd
 sudo chmod 644 /etc/motd
 
-
-
-
 sudo rm -f /etc/update-motd.d/10* /etc/update-motd.d/8* /etc/update-motd.d/9* /etc/update-motd.d/50-motd-news
 
-
-
-
-echo "Banner /etc/issue.net" | sudo tee -a /etc/ssh/sshd_config
-
+echo "Banner /etc/issue.net" | sudo tee -a /etc/ssh/sshd_config 
+sudo sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
 sudo service ssh restart 
 
 
 # 2. telegraf 설정 
 sudo tar zxvf /home/ubuntu/cloud-init/ubuntu22/telegraf.tgz -C /etc
 sudo apt update; sudo apt install jq -y
+
 sudo sed -i 's/20s/60s/' /etc/telegraf/template/template/telegraf.conf.template 
 sudo apt install /etc/telegraf/telegraf_1.7.2-1_amd64.deb
+
 sudo systemctl enable --now telegraf  
 sudo echo "(nohup /etc/telegraf/template/reset_metric_agent_conf.sh > /dev/null 2>&1 &) #telegraf config script" | sudo tee -a /home/kadap/.bashrc
 sudo systemctl status telegraf
 
 # 3. cockput 설치 
 . /etc/os-release && sudo apt install -t ${VERSION_CODENAME}-backports cockpit -y
-sudo rm /etc/issue.d/cockpit.issue
+
 
 # 4. cloud.cfg
 
-#sudo apt install -y acpid cloud-init cloud-initramfs-growroot
+sudo apt install -y acpid cloud-init cloud-initramfs-growroot
 
 
 sudo sed -i 's/name: ubuntu/name: kadap/' /etc/cloud/cloud.cfg
 sudo sed -i 's/lock_passwd: True/lock_passwd: false/' /etc/cloud/cloud.cfg
 sudo sed -i 's/gecos: Ubuntu/gecos: KADaP default user/' /etc/cloud/cloud.cfg
 
-vi /etc/cloud/cloud.cfg
+sudo vi /etc/cloud/cloud.cfg
 """
 
-ssh_pwauth: True
+
 
 apt:
   primary:
@@ -78,8 +73,6 @@ echo "sudo cp /etc/issue /etc/issue.net" | sudo tee -a /home/kadap/.bashrc
 
 sudo rm /etc/netplan/50-cloud-init.yaml
 sudo cloud-init clean
-
-sudo passwd --expire kadap
 
 
 history -cw  
