--- a/ubuntu22/README
+++ b/ubuntu22/README
@@ -5,6 +5,7 @@ sudo adduser kadap
 
 git clone https://github.com/limhunjung/cloud-init.git
 
+# OS 버젼 이름에 따라 내용 수정 필요 
 sudo mv /home/ubuntu/cloud-init/ubuntu22/first-login.msg /etc/issue.net
 sudo chown root /etc/issue.net && sudo chgrp root /etc/issue.net
 sudo chmod 644 /etc/issue.net
