--- a/ubuntu22/README
+++ b/ubuntu22/README
@@ -81,7 +81,7 @@ history -cw
 runcmd:
   - |
     #!/bin/bash
-    passwd="kadap$(printf "%04d" $((RANDOM % 10000)))"
+    passwd="kadap$((RANDOM % 10000))"
     echo "$passwd" > /home/kadap/.passwd
     echo "                                  ##### PASSWORD : $passwd ##### "
     yes $passwd | sudo passwd kadap
