--- a/ubuntu22/README
+++ b/ubuntu22/README
@@ -50,7 +50,7 @@ sudo sed -i 's/gecos: Ubuntu/gecos: KADaP default user/' /etc/cloud/cloud.cfg
 
 sudo vi /etc/cloud/cloud.cfg
 """
-bootrun:
+bootcmd:
  - sudo echo "(nohup /etc/telegraf/template/reset_metric_agent_conf.sh > /dev/null 2>&1 &) #telegraf config script" | sudo tee -a /home/kadap/.bashrc
 
 runcmd:
