--- a/ubuntu22/README
+++ b/ubuntu22/README
@@ -58,13 +58,19 @@ touch /home/kadap/.Xauthority
 sudo userdel ubuntu
 sudo rm -rf /home/ubuntu
 
-echo "sudo cp /etc/issue /etc/issue.net" | sudo tee -a /home/kadap/.bashrc
+#echo "sudo cp /etc/issue /etc/issue.net" | sudo tee -a /home/kadap/.bashrc
 
 sudo vi /etc/cloud/cloud.cfg
 """
 bootcmd:
  - sudo nohup /etc/telegraf/template/reset_metric_agent_conf.sh > /dev/null 2>&1 &
-
+  - |
+    #!/bin/bash
+    read -r value < /home/ubuntu/.passwd
+    if [ $(stat -c %W /etc/shadow) -ne $value ] ; then
+        echo "Paassword Updated! Remove msg"
+        cp /etc/issue /etc/issue.net
+    fi
 runcmd:
   - |
     #!/bin/bash
