--- a/ubuntu22/README
+++ b/ubuntu22/README
@@ -6,27 +6,12 @@ sudo adduser kadap
 git clone https://github.com/limhunjung/cloud-init.git
 
 
-sudo mv /home/ubuntu/cloud-init/ubuntu22/issue.net.first /etc/issue.net
-sudo chown root /etc/issue.net && sudo chgrp root /etc/issue.net
-sudo chmod 644 /etc/issue.net
-
-sudo mv /home/ubuntu/cloud-init/ubuntu22/issue /etc/issue
-sudo chown root /etc/issue && sudo chgrp root /etc/issue
-sudo chmod 644 /etc/issue
-
-sudo mv /home/ubuntu/cloud-init/ubuntu22/issue.sh /etc/issue.sh
-sudo chown root /etc/issue.sh && sudo chgrp root /etc/issue.sh
-sudo chmod 644 /etc/issue.sh && sudo chmod +x /etc/issue.sh
-
-sudo mv /home/ubuntu/cloud-init/ubuntu22/motd* /etc/
-sudo chown root /etc/motd* && sudo chgrp root /etc/motd*
-sudo chmod 644 /etc/motd*
-sudo mv /etc/motd.first /etc/motd
-
+sudo mv /home/ubuntu/cloud-init/ubuntu22/motd.final /etc/motd
+sudo chown root /etc/motd* && sudo chgrp root /etc/motd
+sudo chmod 644 /etc/motd
 sudo rm -f /etc/update-motd.d/10* /etc/update-motd.d/8* /etc/update-motd.d/9* /etc/update-motd.d/50-motd-news
-
-echo "Banner /etc/issue.net" | sudo tee -a /etc/ssh/sshd_config 
 sudo sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
+
 sudo service ssh restart 
 
 
@@ -48,23 +33,10 @@ sudo systemctl status telegraf
 
 sudo apt install -y acpid cloud-init cloud-initramfs-growroot
 
-
 sudo sed -i 's/name: ubuntu/name: kadap/' /etc/cloud/cloud.cfg
 sudo sed -i 's/lock_passwd: True/lock_passwd: false/' /etc/cloud/cloud.cfg
 sudo sed -i 's/gecos: Ubuntu/gecos: KADaP default user/' /etc/cloud/cloud.cfg
 
-sudo rm /etc/netplan/50-cloud-init.yaml
-sudo cloud-init clean
-sudo apt autoclean
-
-#------------------------------------------------------------------------------
-# 재부팅 (kadpa 키파일 로그인)
-touch /home/kadap/.Xauthority 
-sudo userdel ubuntu
-sudo rm -rf /home/ubuntu
-
-
-sudo apt-get install inotify-tools 
 sudo vi /etc/cloud/cloud.cfg
 """
 bootcmd:
@@ -76,6 +48,25 @@ apt:
       uri: http://mirror.kakao.com/ubuntu/
 
 timezone: Asia/Seoul
+
+
+
+sudo rm /etc/netplan/50-cloud-init.yaml
+sudo cloud-init clean
+sudo apt autoclean
+
+#------------------------------------------------------------------------------
+# 재부팅 (kadpa 키파일 로그인)
+touch /home/kadap/.Xauthority 
+sudo userdel ubuntu
+sudo rm -rf /home/ubuntu
+
+sudo rm /etc/netplan/50-cloud-init.yaml
+sudo cloud-init clean
+
+
+history -cw  
+
 
 
 
