--- a/dcv/README
+++ b/dcv/README
@@ -3,8 +3,6 @@
 sudo apt update && sudo apt install --no-install-recommends ubuntu-desktop mesa-utils -y
 
 
-
-
 #디스플레이 메니져 변경 (ubuntu 18이상은 gdm3 only)
 sudo apt install -y gdm3
 sudo sed -ie 's/#WaylandEnable=false/WaylandEnable=false/' /etc/gdm3/custom.conf #dcv
@@ -42,11 +40,16 @@ sudo dcv create-session --owner kadap kadap   #rc.local에 추가 (필수!!!)
  
  dcv list-sessions
  
- 
-#?root 로그인
-#lxde에서 화면 작음 
+
 
 # 서비스 등록 
+
+```bash 
+mkdir /home/kadap/.dcv
+mv ~/cloud-init/dcv/dcv-monitor.sh /home/kadap/.dcv/
+sudo mv ~/cloud-init/dcv/dcvd.service /etc/systemd/system/
+
+
 sudo tar -xvf sessionctl.tar -C /opt/
 
 
@@ -54,3 +57,4 @@ sudo tar -xvf sessionctl.tar -C /opt/
 /opt/nice/isbc/sessionctl.sh &  를 추가해주시면됩니다.
 
 
+# 데스크탑 환경 만들기 
