--- a/dcv/README
+++ b/dcv/README
@@ -1,6 +1,7 @@
 #ubuntu 20.04 
 #apt install --no-install-recommends lxde -y
-sudo apt update && sudo apt install --no-install-recommends ubuntu-desktop mesa-utils -y
+#sudo apt update && sudo apt install --no-install-recommends ubuntu-desktop mesa-utils -y
+sudo apt update && sudo apt install ubuntu-mate-desktop mesa-utils -y 
 
 
 #디스플레이 메니져 변경 (ubuntu 18이상은 gdm3 only)
